--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,7 +14,7 @@
     "react-plaid-link": "^3.3.2",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
