--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Kei-KC/Indulgence#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "connect-mongodb-session": "^3.1.1",
     "d3": "^7.6.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
