--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-loading-dot": "^1.0.6",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-plaid-link": "^3.3.2",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
